--- a/src/pages/Home/OurBest/BestService/BestService.css
+++ b/src/pages/Home/OurBest/BestService/BestService.css
@@ -1,10 +1,12 @@
 .best-card {
-	background: #42b3e5;
 	transition: 0.5s;
 	cursor: pointer;
+	color: #021e1f;
 }
+
 .best-card:hover {
-	background: #021b26;
+	background: #041a22;
+	color: #fff;
 }
 .best-card > img {
 	margin: 10px auto;
